Alteração nas class da div

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
         <button class="convert-button">converter</button>
 
         <section>
-            <div>
-                <img class="currency-box" src="./assets/Real.png" alt="logo-moeda-a-converter">
+            <div class="currency-box">
+                <img src="./assets/Real.png" alt="logo-moeda-a-converter">
                 <p class="currency">Real</p>
                 <p class="currency-value-to-convert">R$ 0,00</p>
             </div>
 
             <img class="arrow-img" src="./assets/arrow.png" alt="uma-seta">
 
-            <div>
-                <img class="currency-box" src="./assets/Dolar.png" alt="logo-moeda-convertida">
+            <div class="currency-box">
+                <img src="./assets/Dolar.png" alt="logo-moeda-convertida">
                 <p class="currency">Dólar</p>
                 <p class="currency-value">US$ 0.0</p>
             </div>
